Bug 1098139 - Add attribute isPrimary detection for got/lostpointercapture events. r=smaug